# verra-one

./: .gitignore  .verraignore.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/verra/: __init__.py  __main__.py  cli.py  config.py  eval.py  mcp_server.py  server.py
src/verra/agent/: __init__.py  chat.py  llm.py  tools.py
src/verra/analytics/: __init__.py  batch.py  influence.py
src/verra/briefing/: __init__.py  detector.py
src/verra/deploy/: Dockerfile  __init__.py  docker-compose.yml  ssh.py  verra.service
src/verra/ingest/: __init__.py  analyser.py  base.py  chunking.py  dedup.py  drive.py  email_cleaner.py  extractors.py  folder.py  gmail.py  ner.py  outlook.py  pipeline.py  references.py  time_resolver.py
src/verra/retrieval/: __init__.py  router.py  search.py
src/verra/store/: __init__.py  analysis.py  db.py  entities.py  memory.py  metadata.py  tabular.py  (+1 more)
test-data/: company-policies.md
test-data/clients/: client-list.csv
test-data/contracts/: acme-corp-agreement.md  techco-proposal.md
test-data/emails/: email-threads.txt
test-data/invoices/: invoice-2024-001.csv
test-data/meeting-notes/: 2024-03-15-team-standup.md  2024-04-22-techco-kickoff.md
test-data/team/: team-roster.csv
tests/: conftest.py  eval_suite.py  test_analyser.py  test_analysis_store.py  test_analytics.py  test_authority.py  test_briefing.py  test_chat_advanced.py  test_chunking.py  test_code_handling.py  test_daemon.py  test_dedup.py  test_deploy.py  test_e2e.py  test_email_cleaner.py  test_error_handling.py  test_extractors.py  test_gmail.py  test_hierarchy.py  test_influence.py  test_load.py  test_metadata.py  test_references.py  test_reranking_bm25.py  test_retrieval.py  test_router_expanded.py  test_search_advanced.py  test_security.py  test_time_resolver.py  test_vector.py
tests/fixtures/: sample.csv  sample.md  sample.txt
(+2 files in other folders)
